--- a/index.html
+++ b/index.html
@@ -2,134 +2,113 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="stye.css">
     <link rel="stylesheet" href="pageTrantition.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stye.css">
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="jQuery.js"></script>
     <title>MyPortofolio | Handsome_Hanz</title>
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo" id="navLink"><a href="#top">Handsome_Hanz</a></div>
-        <ul class="navLinks">
-            <li><a id="navLink" href="#about">About Me</a></li>
-            <li><a id="navLink" href="#">My Skills</a></li>
-            <li><a id="navLink" href="#">Contact Me</a></li>
-        </ul>
-        <div class="burger" onclick="change(this)">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
-    <div class="header">
-        <div class="headerBg"></div>
-        <div class="headerTitle">
-            <div class="headerTitleAvatar">
-                <img src="discordProfile.webp">
+    <div>
+        <nav class="navbar">
+            <div class="logo"><a href="#top" class="linkNav">Handsome_Hanz</a></div>
+            <ul class="navLinks">
+                <li><a href="#about" class="linkNav">About Me</a></li>
+                <li><a href="#skills" class="linkNav">My Skills</a></li>
+            </ul>
+            <div class="burger" onclick="change(this)">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
-            <h1>Hello, My Name Is <span class="typed" id="typed"></span></h1>
-            <p class="headerTitleDesc">Refresh Page To See It Again</p>
-        </div>
-    </div>
-    <div class="about" id="about">
-        <div class="aboutTitle" data-aos="fade-left" data-aos-duration="1000">
-            <h1>About Me</h1>
-            <div class="aboutTitleDesc" data-aos="fade-left" data-aos-duration="1200">
-                <p>Some Basic Information of My Biodata</p>
+        </nav>
+
+        <div class="header">
+            <div class="headerContent">
+                <h1>Hello,<br><span id="typed"></span></h1>
             </div>
+            <div class="headerBg"></div>
         </div>
-        <div data-aos="fade-right" data-aos-duration="1500" class="aboutContent">
-            <i data-aos="fade-right" data-aos-duration="2300" class="fa fa-quote-right bgIconLeft"></i>
-            <p>Hello! My Name Is Handsome_Hanz, it's my discord nickname, I get this nick name from meme that called "Hanz, get ze flammenwerfer" and.. yeah for first time I used that name, I feel like weird cuz, I use meme for nickname reference. Also, I like code something into a website, I'm a front-end website developer, I want to learn back-end website development too, and become : "THE FULLSTACK WEB DEVELOPER". And because that, I want to dive into coding because it takes me from looking at the monitor very often for a long time, so I couldn't explore coding all the time, and most importantly : "IT MAKES MONEY" :)</p>
-        </div>
-    </div>
-    <div class="skills">
-        <div class="skillTitle" data-aos="fade-right" data-aos-duration="1000">
-            <h1>My Skill In Programming Universe</h1>
-            <div class="skillTitleDesc" data-aos="fade-right" data-aos-duration="1200">
-                <p>Show Some Skill That I Learned</p>
+
+        <div class="about" id="about">
+            <div class="aboutImg">
+                <img src="Semarang.jpeg">
             </div>
-        </div>
-        <ul class="skillList">
-            <i data-aos="fade-right" data-aos-duration="2300" class="fa fa-quote-right bgIconLeft"></i>
-            <li>
-                <div class="skillField">
-                    <h2>HTML5</h2>
-                    <span class="bar"><span class="html"></span></span>
+            <div class="aboutContent">
+                <div class="sectionTitle">
+                    <h1>About Me</h1>
                 </div>
+                <h3>Hello! My name is Rafael Williem, I'm in 9th grade, I wasn't good at math, and science. I'm very interested with tech and website development.</h3>
+                <h3>I like computer stuff since I was kid, I like playing video game, and make me more interested to explore deeper into it.</h3>
+                <h3>I can speak Indonesian language, little bit English, and now, I'm learning Japanese language. I want go to Japan, so... I must learn their language.</h3>
+                <br>
+                <a href="#contact" class="aboutBtn">Contact Me</a>
+            </div>
+        </div>
+
+        <div class="skills" id="skills">
+            <div class="sectionTitle">
+                <h1>My Skills</h1>
+            </div>
+            <li>
+                <h3 class="barTitle">HTML</h3>
+                <span class="bar"><span class="html" per="90%"></span></span><img src="Icon/html5.svg" alt="HTML5" class="barIcon">
             </li>
             <li>
-                <div class="skillField">
-                    <h2>CSS3</h2>
-                    <span class="bar"><span class="css"></span></span>
-                </div>
+                <h3 class="barTitle">CSS</h3>
+                <span class="bar"><span class="css" per="75%"></span></span><img src="Icon/css3.svg" alt="CSS3" class="barIcon">
             </li>
             <li>
-                <div class="skillField">
-                    <h2>JAVASCRIPT</h2>
-                    <span class="bar"><span class="js"></span></span>
-                </div>
+                <h3 class="barTitle">JavaScript</h3>
+                <span class="bar"><span class="js" per="8%"></span></span><img src="Icon/javascript.svg" alt="JS" class="barIcon">
+                <p class="barDesc">My JS skill is so decent..... hisk ;(</p>
             </li>
-        </ul>
-    </div>
-
-    <div class="contact" id="contact">
-        <div class="contactTitle" data-aos="fade-bottom" data-aos-duration="1000">
-            <h1>Contact Me!!!</h1>
-            <div class="contactTitleDesc" data-aos="fade-bottom" data-aos-duration="1200">
-                <p>Here's Some List of My Contact</p>
-            </div>
         </div>
-        <ul class="contactCard">
-            <li class="email">
-                <div class="contactCardContent">
-                    <div class="cardTitle">
-                        <h1>Email</h1>
-                        <i class="fa fa-envelope"></i>
-                        <p>webdevboii@gmail.com</p>
-                    </div>
-                </div>
-            </li>
-            <li class="whatsapp">
-                <div class="contactCardContent">
-                    <div class="cardTitle">
-                        <h1>Whatsapp</h1>
-                        <i class="fa fa-whatsapp"></i>
-                        <p>+62 812 9883 4967</p>
-                    </div>
-                </div>
-            </li>
-            <li class="facebook">
-                <div class="contactCardContent">
-                    <div class="cardTitle">
-                        <h1>Facebook</h1>
-                        <i class="fa fa-facebook"></i>
-                        <p>+62 812 9883 4967</p>
-                    </div>
-                </div>
-            </li>
-        </ul>
+
+        <div class="contact" id="contact">
+            <div class="sectionTitle">
+                <h1>Contact Me</h1>
+            </div>
+            <ul class="contactCards">
+                <li>
+                    <h2>My Facebook</h2>
+                    <i class="fa fab fa-facebook-square"></i>
+                    <p>DaBoii</p>
+                </li>
+                <li>
+                    <h2>My Email</h2>
+                    <i class="fa far fa-envelope"></i>
+                    <p>webdevboii@gmail.com</p>
+                </li>
+                <li>
+                    <h2>My Instagram</h2>
+                    <i class="fa fab fa-instagram"></i>
+                    <p>DaBoii</p>
+                </li>
+                <li>
+                    <h2>My WhatsApp</h2>
+                    <i class="fa fab fa-whatsapp"></i>
+                    <p>+62 8129 8834 967</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer">
+            <p>&copy; 2020 made with <i class="fa fa-heart-o"></i> by Handsome_Hanz</p>
+        </div>
     </div>
 
-    <div class="footer">
-        <p>&copy; 2020 made with <i class="fa fa-heart-o"></i> by Handsome_Hanz</p>
-    </div>
-
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="app.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
 
 </html>
