--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="about" id="about">
             <div class="aboutImg">
-                <img src="Semarang.jpeg">
+                <img src="Semarang-min.jpeg">
             </div>
             <div class="aboutContent">
                 <div class="sectionTitle">
