--- a/index.html
+++ b/index.html
@@ -99,27 +99,31 @@
                 <h1>Contact Person</h1>
             </div>
             <div class="cards">
-                <ul class="contactCards">
-                    <li>
-                        <h2>My Facebook</h2>
-                        <i class="fa fab fa-facebook-square"></i>
-                        <p>DaBoii</p>
-                    </li>
-                    <li>
-                        <h2>My Email</h2>
-                        <i class="fa far fa-envelope"></i>
-                        <p>webdevboii@gmail.com</p>
-                    </li>
-                    <li>
-                        <h2>My Instagram</h2>
-                        <i class="fa fab fa-instagram"></i>
-                        <p>DaBoii</p>
-                    </li>
-                    <li>
-                        <h2>My WhatsApp</h2>
-                        <i class="fa fab fa-whatsapp"></i>
-                        <p>+62 8129 8834 967</p>
-                    </li>
+                <ul>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100030036000388&viewas=100000686899395">
+                        <li>
+                            <h4>Facebook</h4>
+                            <h6>DaBoii</h6>
+                        </li>
+                    </a>
+                    <a target="_blank" href="https://www.instagram.com/danoobboii/">
+                        <li>
+                            <h4>Instagram</h4>
+                            <h6>DaBoii</h6>
+                        </li>
+                    </a>
+                    <a target="_blank" href="https://mail.google.com/mail/u/0/#inbox">
+                        <li>
+                            <h4>Email</h4>
+                            <h6>rafaelwilliem09@gmail.com</h6>
+                        </li>
+                    </a>
+                    <a target="_blank" href="https://web.whatsapp.com/">
+                        <li>
+                            <h4>WhatsApp</h4>
+                            <h6>+62 8129 8834 967</h6>
+                        </li>
+                    </a>
                 </ul>
             </div>
         </div>
