--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </ul>
             </div>
         </div>
-        <p class="copyright">&copy 2020 Made by Rafael Williem</p>
+        <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Rafael Williem All Rights Reserved</p>
     </div>
 
     <script src="script.js"></script>
